--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" type="text/css" href="css/app.min.css">
-    <title>Tack - Website</title>
+    <title>Tack - Contacts Made Easy</title>
   </head>
   <body>
 
     <div class="jumbotron">
       <div class="container">
-        <h1 class="display-4">Tack Webpage</h1>
-        <p class="lead">Coming soon</p>
+        <h1 class="display-4">
+        Tack
+        <i class="fa fa-fw fa-thumb-tack"></i>
+        </h1>
+        <p class="lead">Contacts Made Easy</p>
       </div>
     </div>
 
