Added download link for APK

--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
 
     <div class="jumbotron">
       <div class="container">
+
         <h1 class="display-4">
         Tack
         <i class="fa fa-fw fa-thumb-tack"></i>
         </h1>
+
         <p class="lead">Contacts Made Easy</p>
+
+        <a class="btn btn-primary-outline" href='./build/tack.apk' download='true' >
+          <i class="fa fa-android"></i>
+          Download for Android
+        </a>
+
       </div>
     </div>
 
@@ -24,9 +32,9 @@
       <hr>
       <footer class="text-center">
 
-      <a href="https://github.com/TackRPI" target="_blank"><i class="fa fa-fw fa-2x fa-github"></i></a>
+      <!-- <a href="https://github.com/TackRPI" target="_blank"><i class="fa fa-fw fa-2x fa-github"></i></a> -->
 
-      <br><br>
+      <!-- <br><br> -->
 
       <p class="small">Tack 2016</p>
 
