--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
+    <script src="http://localhost:4000/livereload.js"></script>
     <link rel="stylesheet" type="text/css" href="css/app.min.css">
     <title>Tack - Contacts Made Easy</title>
   </head>
   <body>
-    <div class="jumbotron">
+    <div class="jumbotron m-b-0 p-b-0">
       <div class="container">
         <div class="row">
-          <div class="col-xs-6 text-center"><img src="img/phone.png" class="phone"></div>
-          <div class="col-xs-6">
+          <div class="col-xs-12 col-sm-6 col-md-6 text-center"><img src="img/phone.png" class="phone"></div>
+          <div class="col-xs-12 col-sm-6 col-md-6">
             <h1 class="display-2">Tack<i class="fa fa-fw fa-thumb-tack"></i></h1><br>
             <h2 class="text-muted subtitle">Contacts Made Easy</h2>
             <div class="row m-t-2">
