Added documented code standards

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1 class="display-2">Tack<i class="fa fa-fw fa-thumb-tack"></i></h1><br>
             <h2 class="text-muted subtitle">Contacts Made Easy</h2>
             <div class="row m-t-2">
-              <div class="col-xs-12"><a href="./build/tack.apk" download="true" class="btn btn-lg btn-primary-outline w-100"><i class="fa fa-fw fa-android"></i>&nbsp;
+              <div class="col-xs-12"><a href="./build/tack.apk" download="tack.apk" class="btn btn-lg btn-primary-outline w-100"><i class="fa fa-fw fa-android"></i>&nbsp;
                   Download for Android</a></div>
             </div>
             <hr>
@@ -28,6 +28,10 @@
             <div class="row m-t-2">
               <div class="col-xs-12"><a href="http://hello.tack.host/tack_rails" target="_blank" class="btn btn-lg btn-success-outline w-100"><i class="fa fa-fw fa-server"></i>&nbsp;
                   Server Documentation</a></div>
+            </div>
+            <div class="row m-t-2">
+              <div class="col-xs-12"><a href="http://hello.tack.host/standards" target="_blank" class="btn btn-lg btn-success-outline w-100"><i class="fa fa-fw fa-code"></i>&nbsp;
+                  Documented Code Standards</a></div>
             </div>
           </div>
         </div>
